feat: :sparkles: add new endpoints for seat management and update event endpoints